# truelink

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-docs.in  requirements.in  test_changes.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  build_and_push.yml  docs.yml  format.yml
docs/: __init__.py  adding-resolvers.md  advanced-usage.md  changelog.md  configuration.md  contributing.md  core.md  exceptions.md  gen_ref_pages.py  getting-started.md  index.md  installation.md  macros.py  types.md
docs/assets/stylesheets/: extra.css
examples/: basic_usage.py
src/truelink/: __init__.py  core.py  mimetypes.py  types.py
src/truelink/resolvers/: __init__.py  base.py  buzzheavier.py  devuploads.py  doodstream.py  fichier.py  filepress.py  fuckingfast.py  krakenfiles.py  linkbox.py  linkvertise.py  lulacloud.py  mediafile.py  mediafire.py  onedrive.py  pcloud.py  pixeldrain.py  spankbang.py  streamtape.py  terabox.py  tmpsend.py  uploadee.py  uploadhaven.py  wetransfer.py  xfeed.py  xham.py  yandexdisk.py
tests/: test_links.py
